--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
         <div class="container">
             <div class="header">
                 <h2>Interactive Bible Quiz</h2>
+                <h4>There will be 4 answer choices. You will be able to choose one of them. You will not be able to go back once you have clicked the "Next" Button!</h4>
             </div>
             <div class="main">
-                <div class="question" id="1">
-                    <p>Question</p><span>1</span><p>How many disciples did Jesus choose?</p>
+                <div class="question" id="question">
+                    <p><span id="questionNumber">1</span>How many disciples did Jesus choose?</p>
                 </div>
                 <div class="choices">
-                    <ul>
-                        <li>9</li>
-                        <li>12</li>
-                        <li>13</li>
-                        <li>7</li>
-                    </ul>
+                    <input type="radio" value="9" name="answer1">9<br>
+                    <input type="radio" value="12" name="answer1">12<br>
+                    <input type="radio" value="13" name="answer1">13<br>
+                    <input type="radio" value="7" name="answer1">7<br>
                 </div>
             </div>
             <div class="buttons">
