When the page loads and the Next Button is pressed, all questions and choices from the Master array, appear on the DOM

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             </div>
             <div class="main">
                 <div class="question" id="question">
-                    <p><span id="questionNumber" onload="displayQuestion();"></span><span id = "questionDesc" onload="displayQuestion();">How many disciples did Jesus choose?</span></p>
+                    <p><span id = "questionDesc"></span></p>
                 </div>
                 <div class="choices">
-                    <input type="radio" value="9" name="answer">9<br>
-                    <input type="radio" value="12" name="answer">12<br>
-                    <input type="radio" value="13" name="answer">13<br>
-                    <input type="radio" value="7" name="answer">7<br>
+                    <input type="radio" value="" name="answer" id = "choiceA" checked="checked"><span id ="choice1">&nbsp;</span><br>
+                    <input type="radio" value="" name="answer" id = "choiceB"><span id ="choice2">&nbsp;</span><br>
+                    <input type="radio" value="" name="answer" id = "choiceC"><span id ="choice3">&nbsp;</span><br>
+                    <input type="radio" value="" name="answer" id = "choiceD"><span id ="choice4">&nbsp;</span><br>
                 </div>
             </div>
             <div class="buttons">
