Displaying the score on the page after the Submit Button is pressed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <input type="radio" value="" name="answer" id = "choiceC"><span id ="choice3">&nbsp;</span><br>
                     <input type="radio" value="" name="answer" id = "choiceD"><span id ="choice4">&nbsp;</span><br>
                 </div>
+                <span id="success">&nbsp;</span>
             </div>
             <div class="buttons">
                 <button class="next" id="next">Next</button>
